k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-project-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cs-project-api
  template:
    metadata:
      labels:
        app: cs-project-api
    spec:
      containers:
      - name: cs-project-api
        image: ghcr.io/ahendest/cs-project-api:sha-6da2edd 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cs-project-api-service
spec:
  selector:
    app: cs-project-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
